Implemented the ability to export settings to Obs Studio (in a new way) and import settings from. The settings are saved in the file 'scenario.json'

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
+venv/
+
 __pycache__/
 *.pyc
-.venv/
+*.pyo
+*.pyd
 
 .env
 *.log
 
+scenario.json
+
+.vscode/*
+!.vscode/launch.json
+
 node_modules/
 **/package-lock.json
 
+**/backup_*/
 tests/
